<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:padding="10dp"
    android:background="@drawable/floating_widget_background">

<ImageView
android:id="@+id/open_overlay_icon"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:src="@mipmap/ic_overlay"
android:layout_centerInParent="true"
android:contentDescription="@string/open_overlay"
android:visibility="visible"/>

<RelativeLayout
android:id="@+id/overlay_content"
android:layout_width="250dp"
android:layout_height="wrap_content"
android:visibility="gone"
android:layout_marginTop="10dp">

<EditText
    android:id="@+id/prompt_input"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_your_prompt"
    android:background="@android:color/white"
    android:importantForAutofill="no"
    android:textColor="@android:color/black"
    android:padding="8dp"
    android:layout_marginBottom="10dp"/>

<Button
    android:id="@+id/send_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/send"
    android:layout_below="@id/prompt_input"/>

<ScrollView
    android:id="@+id/response_scrollview"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_below="@id/send_button">
    <TextView
        android:id="@+id/response_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/response_will_appear_here"
        android:textColor="@android:color/black"
        android:padding="5dp"/>
</ScrollView>

<ImageView
    android:id="@+id/close_overlay_icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_close_overlay"
    android:layout_alignParentEnd="true"
    android:layout_margin="10dp"
    android:contentDescription="@string/close_overlay"/>
</RelativeLayout>
    </RelativeLayout>
